--- a/SASS/restolist.scss
+++ b/SASS/restolist.scss
@@ -1,121 +1,3 @@
-/******VARIABLES*****/
-
-$MainColor: #9356DC;
-$SecondColor: #FF79DA;
-$ThirdColor: #99E2D0; 
-$GreyColor: #EAEAEA;
-
-/*****GENERAL*****/
-
-body {
-    margin: 0;
-}
-
-* {
-    font-family: 'Roboto', sans-serif;
-}
-
-a {
-    color: inherit;
-    text-decoration: none;
-}
-
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 4em;
-    box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
-    position: sticky;
-    z-index: 2;
-}
-
-.headerBack {
-    display: flex;
-    justify-content: center;
-    height: 4em;
-    align-items: center;
-    .arrow {
-        position: absolute;
-        margin-right: 22em;
-    }
-}
-
-.backImg {
-    width: 100%;
-    max-height: 30em;
-    object-fit: cover;    
-}
-
-.restosName {
-    width: auto;
-    background-color: whitesmoke;
-    padding: 1em;
-    position: relative;
-    border-radius: 3em 3em 0 0;
-    margin-top: -4em;
-    .restosHead {
-        font-family: "Shrikhand", serif;
-        font-size: 28px;
-        margin-top: 1em;
-        margin-bottom: 1.5em;
-    }
-    .allMenu {
-        display: grid;
-        gap: 3em;
-    }
-    .menuBlock {
-        display: flex;
-        flex-direction: column;
-        gap: 0.8em;
-    }
-    .menuTitle {
-        font-size: 16px;
-        font-weight: 300;
-        padding-bottom: 0.5em;
-        border-bottom: 3px solid #99E2D0;
-        width: 10%;
-    }
-    .menuChoices {
-        background-color: white;
-        border-radius: 15px;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        padding: 0.7em;
-    }
-    .dishesCard {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .dishesName {
-        margin: 2px;
-        font-weight: 500;
-    }
-    .dishesSpec {
-        margin: 2px;
-        font-weight: 300;
-    }
-    .dishesPrice {
-        font-weight: 700;
-    }
-    .mainButtonPurple {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 30px;
-        background: linear-gradient(162deg, #FF79DA 0%, #9356DC 100%);
-        color: white;
-        margin: 3em auto;
-        width: 60%;
-        height: 50px;
-        box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
-    }
-    .mainButtonPurple:hover {
-        filter: brightness(1.1);
-        transition: 0.3s;
-    }
-}
-
 .location {
     display: flex;
     justify-content: center;
@@ -202,6 +84,12 @@ a {
     .cardIcon {
         margin-left: 2em;
     }
+    .iconGrey {
+        color: $iconGrey;
+    }
+    .iconPurple {
+        color: $MainColor;
+    }
     .cardTxt {
         font-weight: 500;
     }
@@ -220,6 +108,12 @@ a {
         background-color: white;
         border-radius: 20px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
+    }
+    .restosdetail {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-right: 1em;
     }
     .restosList a {
         position: relative;
@@ -247,35 +141,3 @@ a {
         margin: 0;  
     }
 }
-
-footer {
-    padding: 1em 1.5em;
-    background-color: #353535;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    .footerTitle { 
-        font-family: "Shrikhand", serif;
-        font-weight: 300;
-    }
-    .footerLink {
-        display: flex;
-        flex-direction: column;
-        gap: 8px;
-        margin-bottom: 10px;
-    }
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
