--- a/SASS/restomenu.scss
+++ b/SASS/restomenu.scss
@@ -42,21 +42,48 @@
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
         padding: 0.7em;
     }
+    .menuChoices:hover .menuSelect {
+        opacity: 100%;
+        width: 55px;
+    }
     .dishesCard {
         display: flex;
         justify-content: space-between;
-        align-items: center;
     }
     .dishesName {
         margin: 2px;
         font-weight: 500;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     .dishesSpec {
         margin: 2px;
         font-weight: 300;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     .dishesPrice {
         font-weight: 700;
+    }
+    .menuSelect {
+        background-color: $ThirdColor;
+        width: 0;
+        opacity: 0;
+        height: auto;
+        border-radius: 0 15px 15px 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-right: -11px;
+        margin-top: -20px;
+        margin-bottom: -20px;
+        transition: transform 0.4s ease-in-out, width 0.4s ease-in-out, opacity 0.4s ease-in-out;
+    }
+    .iconCheck {
+        background-color: $iconWhite;
+        border-radius: 15px;
+        color: $ThirdColor;
+        display: inline-block;
     }
     .mainButtonPurple {
         display: flex;
