--- a/SASS/restomenu.scss
+++ b/SASS/restomenu.scss
@@ -14,11 +14,28 @@
     .restosHead {
         display: flex;
         justify-content: space-between;
-        padding-right: 1em;
+        width: 100%;
         font-family: "Shrikhand", serif;
         font-size: 28px;
         margin-top: 1em;
         margin-bottom: 1.5em;
+    }
+    .heartIcon i {
+        position: absolute;
+        right: 1em;
+        top: 1.5em;
+    }
+    .filledHeart {
+        color: transparent;
+        background-image: linear-gradient(#9356DC, #FF79DA);
+        background-clip: text;
+        -webkit-background-clip: text;
+        opacity: 0;
+        height: 100%;
+        transition: all 300ms ease;
+    }
+    .filledHeart:hover {
+        opacity: 1;
     }
     .allMenu {
         display: grid;
@@ -43,12 +60,18 @@
         padding: 0.7em;
     }
     .menuChoices:hover .menuSelect {
-        opacity: 100%;
+        opacity: 1;
         width: 55px;
+        height: auto;
+        margin: -11px;
     }
     .dishesCard {
         display: flex;
         justify-content: space-between;
+    }
+    .dishesInfo {
+        display: flex;
+        flex-direction: column;
     }
     .dishesName {
         margin: 2px;
@@ -64,26 +87,24 @@
     }
     .dishesPrice {
         font-weight: 700;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-end;
     }
     .menuSelect {
         background-color: $ThirdColor;
         width: 0;
         opacity: 0;
-        height: auto;
         border-radius: 0 15px 15px 0;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-right: -11px;
-        margin-top: -20px;
-        margin-bottom: -20px;
         transition: transform 0.4s ease-in-out, width 0.4s ease-in-out, opacity 0.4s ease-in-out;
     }
     .iconCheck {
         background-color: $iconWhite;
-        border-radius: 15px;
+        border-radius: 50px;
         color: $ThirdColor;
-        display: inline-block;
     }
     .mainButtonPurple {
         display: flex;
