--- a/css/style.css
+++ b/css/style.css
@@ -166,11 +166,15 @@
   right: 1em;
 }
 .restos .filledHeart {
-  color: linear-gradient(#9356DC, #FF79DA);
+  color: transparent;
+  background-image: linear-gradient(#9356DC, #FF79DA);
   background-clip: text;
   -webkit-background-clip: text;
+  opacity: 0;
+  height: 100%;
+  transition: all 300ms ease;
 }
-.restos .heartIcon:hover .filledHeart {
+.restos .filledHeart:hover {
   opacity: 1;
 }
 
@@ -191,11 +195,28 @@
 .restosName .restosHead {
   display: flex;
   justify-content: space-between;
-  padding-right: 1em;
+  width: 100%;
   font-family: "Shrikhand", serif;
   font-size: 28px;
   margin-top: 1em;
   margin-bottom: 1.5em;
+}
+.restosName .heartIcon i {
+  position: absolute;
+  right: 1em;
+  top: 1.5em;
+}
+.restosName .filledHeart {
+  color: transparent;
+  background-image: linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  opacity: 0;
+  height: 100%;
+  transition: all 300ms ease;
+}
+.restosName .filledHeart:hover {
+  opacity: 1;
 }
 .restosName .allMenu {
   display: grid;
@@ -220,12 +241,18 @@
   padding: 0.7em;
 }
 .restosName .menuChoices:hover .menuSelect {
-  opacity: 100%;
+  opacity: 1;
   width: 55px;
+  height: auto;
+  margin: -11px;
 }
 .restosName .dishesCard {
   display: flex;
   justify-content: space-between;
+}
+.restosName .dishesInfo {
+  display: flex;
+  flex-direction: column;
 }
 .restosName .dishesName {
   margin: 2px;
@@ -241,26 +268,24 @@
 }
 .restosName .dishesPrice {
   font-weight: 700;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
 }
 .restosName .menuSelect {
   background-color: #99E2D0;
   width: 0;
   opacity: 0;
-  height: auto;
   border-radius: 0 15px 15px 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: -11px;
-  margin-top: -20px;
-  margin-bottom: -20px;
   transition: transform 0.4s ease-in-out, width 0.4s ease-in-out, opacity 0.4s ease-in-out;
 }
 .restosName .iconCheck {
   background-color: white;
-  border-radius: 15px;
+  border-radius: 50px;
   color: #99E2D0;
-  display: inline-block;
 }
 .restosName .mainButtonPurple {
   display: flex;
