--- a/SASS/variables.scss
+++ b/SASS/variables.scss
@@ -7,3 +7,61 @@ $GreyColor: #EAEAEA;
 $iconWhite: white;
 $iconBlack: black;
 $iconGrey: #7e7e7e;
+
+@keyframes loader {
+    from {
+        transform: rotateZ(0deg)
+    }
+    to {
+        transform:rotateZ(360deg)
+    }
+}
+
+@keyframes fadeout {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        z-index: -1;
+    }
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes appear {
+    0% {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+@keyframes tag {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes slide {
+    0% {
+        transform: scaleY(0)
+    }
+    100% {
+        transform: scaleY(1)
+    }
+}
+
