--- a/SASS/header.scss
+++ b/SASS/header.scss
@@ -10,6 +10,10 @@ header {
     align-items: center;
     height: 4em;
     box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
+    img {
+        width: 25%;
+        height: 25px;
+    }
 }
 
 .headerBack {
@@ -20,5 +24,15 @@ header {
     .arrow {
         position: absolute;
         left: 1.5em;
+    }
+}
+
+@media (min-width: 767.98px) {
+    .header {
+        height: 5em;
+    }
+    .header img {
+        height: 35px;
+        max-width: 15%;
     }
 }
