--- a/SASS/restolist.scss
+++ b/SASS/restolist.scss
@@ -66,15 +66,19 @@
         border-radius: 30px;
         background: linear-gradient(162deg, #FF79DA 0%, #9356DC 100%);
         color: white;
+        font-size: 20px;
         margin: 1em auto 2.5em;
+        padding: 0.2em;
         width: 60%;
         height: 50px;
         box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
         animation: fadein 1.5s both 600ms;
+        cursor: pointer;
     }
     .mainButtonPurple:hover {
         filter: brightness(1.1);
         transition: 0.3s;
+        transform: scale(1.10);
     }
 }
 
@@ -146,6 +150,7 @@
         border-radius: 20px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
         animation: appear 2s both 1200ms;
+        margin-bottom: 15px;
     }
     .restosList2 {
         position: relative;
@@ -153,6 +158,7 @@
         border-radius: 20px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
         animation: appear 2s both 1300ms;
+        margin-bottom: 15px;
     }
     .restosList3 {
         position: relative;
@@ -160,6 +166,7 @@
         border-radius: 20px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
         animation: appear 2s both 1400ms;
+        margin-bottom: 15px;
     }
     .restosList4 {
         position: relative;
@@ -167,6 +174,7 @@
         border-radius: 20px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
         animation: appear 2s both 1500ms;
+        margin-bottom: 25px;
     }
     .restosdetail {
         display: flex;
@@ -182,14 +190,14 @@
     }
     .tag {
         background-color: #a9e0d1;
-        color: #3b8468;
+        color: #0c1813;
         position: absolute;
         padding: 0.5em 1em;
         border-radius: 0.2em;
         font-weight: 500;
         top: 1em;
         right: 0.8em;
-        animation: tag 500ms 0ms linear alternate infinite both;
+        animation: tag 800ms 0ms linear alternate infinite both;
     }
     .restosInfos {
         padding: 1em;   
@@ -213,5 +221,85 @@
     }
     .filledHeart:hover {
         opacity: 1;
+    }
+}
+
+/*****MEDIA-QUERIES-TABLET*****/
+
+@media (min-width: 767.98px) {
+    .intro {
+        border-radius: 0 0 25px 25px;
+    }
+    .mainButtonPurple {
+        max-width: 30%;
+    }
+    .function h1 {
+        margin: auto;
+        margin-bottom: 25px;
+    }
+    .function .steps {
+        flex-direction: row;
+        gap: 25px;
+        padding-left: 5px;
+    }
+    .restos {
+        border-radius: 25px 25px 0 0;
+    }
+    .restosTitle {
+        margin: auto;
+        margin-bottom: 25px;
+    }
+    .cardTablet {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        gap: 20px;
+    }
+    .restosList {
+        width: 48%;
+    }
+    .restosList2 {
+        width: 48%;
+    }
+    .restosList3 {
+        width: 48%;
+        height: 350px;
+    }
+    .restosList4 {
+        width: 48%;
+    }
+    .restos .restosCard img {
+        height: 270px;
+    }
+}
+
+/*****MEDIA-QUERIES-DESKTOP*****/
+
+@media (min-width: 1024px) {
+    .intro {
+        border-radius: 0;
+    }
+    nav {
+        border-bottom: 1px solid $SecondColor;
+    }
+    .function-and-restos {
+        display: flex;
+    }
+    .function {
+        background-color: whitesmoke;
+        width: 25%;
+        justify-content: center;
+        border-right: 1px solid $SecondColor;
+    }
+    .function h1 {
+        margin-top: 0;
+    }
+    .function .steps {
+        flex-direction: column;
+    }
+    .restos {
+        width: 75%;
+        border-radius: 0;
     }
 }
