--- a/SASS/restomenu.scss
+++ b/SASS/restomenu.scss
@@ -66,6 +66,7 @@
         animation: appear 1.5s both 800ms;
     }
     .menuChoices {
+        display: flex;
         background-color: white;
         border-radius: 15px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -77,12 +78,18 @@
     }
     .dishesCard {
         display: flex;
+        justify-content: space-between;
+        flex: 1;
+        overflow: hidden;
     }
     .dishesInfo {
         display: flex;
         flex-direction: column;
-        flex: 1;
+        justify-content: space-between;
+        overflow: hidden;
+        white-space: nowrap;
         padding: 0.7em;
+        flex: 1;
     }
     .dishesName {
         margin: 2px;
@@ -109,6 +116,7 @@
         background-color: $ThirdColor;
         width: 0;
         opacity: 0;
+        height: auto;
         border-radius: 0 15px 15px 0;
         display: flex;
         justify-content: center;
