--- a/SASS/restolist.scss
+++ b/SASS/restolist.scss
@@ -49,9 +49,9 @@
     text-align: center;
     animation: fadein 1.5s both 500ms;
     .introTitle {
-        padding-left: 70px;
-        padding-right: 70px;
+        padding: 0 2.5em 0;
         margin-bottom: 10px;
+        font-size: 25px;
     }
     .introTxt {
         margin-top: 0;
@@ -73,12 +73,12 @@
         height: 50px;
         box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
         animation: fadein 1.5s both 600ms;
+        transition: 0.3s;
         cursor: pointer;
     }
     .mainButtonPurple:hover {
         filter: brightness(1.1);
-        transition: 0.3s;
-        transform: scale(1.10);
+        box-shadow: 2px 2px 10px #6b6b6b;
     }
 }
 
@@ -105,6 +105,7 @@
         height: 70px;
         box-shadow: rgba(50, 50, 93, 0) 0px 5px 10px 0px, rgba(0, 0, 0, 0.2) -1px 5px 15px; 
         animation: appear 1.5s both 900ms;
+        cursor: pointer;
     }
     .cardNumber {
         color: white;
@@ -150,37 +151,16 @@
         border-radius: 20px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
         animation: appear 2s both 1200ms;
-        margin-bottom: 15px;
+        margin-bottom: 20px;
     }
-    .restosList2 {
-        position: relative;
-        background-color: white;
-        border-radius: 20px;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
-        animation: appear 2s both 1300ms;
-        margin-bottom: 15px;
+    .delay1 {
+        animation-delay: 1300ms;
     }
-    .restosList3 {
-        position: relative;
-        background-color: white;
-        border-radius: 20px;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
-        animation: appear 2s both 1400ms;
-        margin-bottom: 15px;
+    .delay2 {
+        animation-delay: 1400ms;
     }
-    .restosList4 {
-        position: relative;
-        background-color: white;
-        border-radius: 20px;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
-        animation: appear 2s both 1500ms;
-        margin-bottom: 25px;
-    }
-    .restosdetail {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-right: 1em;
+    .delay3 {
+        animation-delay: 1500ms;
     }
     .restosCard img {
         width: 100%;
@@ -215,26 +195,27 @@
         color: transparent;
         background-image: linear-gradient(#9356DC, #FF79DA);
         background-clip: text;
-        -webkit-background-clip: text;
         opacity: 0;
         transition: all 300ms ease;
     }
-    .filledHeart:hover {
+    .filledHeart:active {
         opacity: 1;
     }
 }
 
 /*****MEDIA-QUERIES-TABLET*****/
 
-@media (min-width: 767.98px) {
-    .intro {
-        border-radius: 0 0 25px 25px;
+@media (min-width: 767.98px) { 
+    .introTitle {
+        font-size: 32px;
     }
     .mainButtonPurple {
         max-width: 30%;
     }
-    .function h1 {
-        margin: auto;
+    .function {
+        padding: 2em 3em 3em;
+    }
+    .function h2 {
         margin-bottom: 25px;
     }
     .function .steps {
@@ -243,34 +224,37 @@
         padding-left: 5px;
     }
     .restos {
-        border-radius: 25px 25px 0 0;
+        padding: 2em 3em 3em;
     }
     .restosTitle {
-        margin: auto;
         margin-bottom: 25px;
     }
     .cardTablet {
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
         flex-wrap: wrap;
-        gap: 20px;
     }
     .restosList {
-        width: 48%;
+        width: 45%;
+        margin-bottom: 0;
     }
     .restosList2 {
-        width: 48%;
+        width: 45%;
+        margin: 0;
     }
     .restosList3 {
-        width: 48%;
-        height: 350px;
+        width: 45%;
+        margin: 0;
     }
     .restosList4 {
-        width: 48%;
+        width: 45%;
+        margin: 0;
     }
     .restos .restosCard img {
-        height: 270px;
+        height: 150px;
+    }
+    .filledHeart:hover {
+        opacity: 1;
     }
 }
 
@@ -279,27 +263,29 @@
 @media (min-width: 1024px) {
     .intro {
         border-radius: 0;
+        .introTitle {
+            font-size: 40px;
+        }
     }
-    nav {
-        border-bottom: 1px solid $SecondColor;
-    }
-    .function-and-restos {
-        display: flex;
+    .intro .mainButtonPurple {
+        max-width: 22%;
     }
     .function {
-        background-color: whitesmoke;
-        width: 25%;
-        justify-content: center;
-        border-right: 1px solid $SecondColor;
+        display: flex;
+        padding: 3em 8em;
     }
-    .function h1 {
+    .function h2 {
         margin-top: 0;
-    }
-    .function .steps {
-        flex-direction: column;
+        margin-bottom: 30px;
     }
     .restos {
-        width: 75%;
         border-radius: 0;
+        padding: 2.5em 8em;
+        .restosCard img {
+            height: 220px;
+        }
+    }
+    .cardTablet {
+        gap: 20px;
     }
 }
