--- a/SASS/restomenu.scss
+++ b/SASS/restomenu.scss
@@ -2,7 +2,7 @@
 
 .backImg {
     width: 100%;
-    height: 250px;
+    height: 300px;
     object-fit: cover;
     animation: fadein 1.5s both 400ms;    
 }
@@ -16,40 +16,41 @@
     position: relative;
     border-radius: 3em 3em 0 0;
     margin-top: -4em;
+    .titleAlign {
+        display: flex;
+        align-items: center;
+        animation: appear 1.5s both 500ms;
+    }
     .restosHead {
         display: flex;
-        justify-content: space-between;
+        justify-content: flex-start;
         font-family: "Shrikhand", serif;
         font-size: 28px;
+        font-weight: 400;
+        font-style: italic;
         max-width: 500px;
-        margin: auto;
-        margin-top: 1em;
-        margin-bottom: 1.5em;
-        animation: appear 1.5s both 500ms;
-        
-        
+        margin: 1em 2em 1em 0;
     }
     .heartIcon i {
-        position: absolute;
-        right: 1.5em;
-        top: 0.2em;
+        font-size: 25px;
     }
     .filledHeart {
+        position: relative;
+        right: 1.15em;
         color: transparent;
         background-image: linear-gradient(#9356DC, #FF79DA);
         background-clip: text;
-        -webkit-background-clip: text;
         opacity: 0;
         transition: all 400ms ease;
     }
+    
     .filledHeart:hover {
         opacity: 1;
     }
+    
     .allMenu {
         display: grid;
         gap: 3em;
-        max-width: 500px;
-        margin: auto;
     }
     .menuBlock {
         display: flex;
@@ -70,11 +71,25 @@
         background-color: white;
         border-radius: 15px;
         box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-        animation: slide 1s 1500ms linear both;
+        animation: slide 1s linear both;
     }
-    .menuChoices:hover .menuSelect {
+    .menudelay1 {
+        animation-delay: 1000ms;
+    }
+    .menudelay2 {
+        animation-delay: 1400ms;
+    }
+    .menudelay3 {
+        animation-delay: 1800ms;
+    }
+    .menudelay4 {
+        animation-delay: 2200ms;
+    }
+    
+    .menuChoices:active .menuSelect {
         opacity: 1;
         width: 55px;
+        box-shadow: rgba(49, 57, 165, 0.2) 0px 8px 24px;
     }
     .dishesCard {
         display: flex;
@@ -121,14 +136,14 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        transition: ease-out width 600ms;
+        transition: ease-out width;
+        transition: 600ms;
     }
     .iconCheck {
         background-color: $ThirdColor;
         border-radius: 50px;
         color: $iconWhite;
         font-size: 20px;
-        transform: rotateZ(360deg);
     }
     .mainButtonPurple {
         display: flex;
@@ -138,44 +153,51 @@
         background: linear-gradient(162deg, #FF79DA 0%, #9356DC 100%);
         color: white;
         margin: 3em auto;
-        width: 60%;
+        width: 45%;
         height: 50px;
         box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
         animation: fadein 1.5s both 1500ms;
         cursor: pointer;
+        transition: 0.3s;
     }
     .mainButtonPurple:hover {
         filter: brightness(1.1);
-        transition: 0.3s;
-        transform: scale(1.10);
+        box-shadow: 2px 2px 10px #6b6b6b;
     }
 }
 
 @media (min-width: 767.98px) {
     .backImg {
-        position: fixed;
-        height: 100%;
+        height: 450px;
     }
     .restosName {
         width: 60%;
         margin: auto;
+        margin-top: -3em;
+        .titleAlign {
+            width: 100%;
+            display: flex;
+            margin: auto;
+            justify-content: center;
+        }
     }
-    .restosName .restosHead {
-        width: 60%;
+    .restosName h2 {
+        padding-right: 0;
+    }
+    .allMenu {
+        max-width: 65%;
         margin: auto;
-        margin-top: 1em;
-        margin-bottom: 1.5em;
-        justify-content: space-around;
     }
-    .restosHead .heartIcon {
-        position: relative;
-        top: 0;
-        right: -2.2em;
+    .menuChoices:hover .menuSelect {
+        opacity: 1;
+        width: 55px;
+        box-shadow: rgba(49, 57, 165, 0.2) 0px 8px 24px;
+    }
+    .mainButtonPurple {
+        max-width: 25%;
     }
 }
 
 @media (min-width: 1024px) {
-    .restosName .restosHead {
-        width: 50%;
-    }
+    
 }
