--- a/SASS/variables.scss
+++ b/SASS/variables.scss
@@ -58,10 +58,12 @@ $iconGrey: #7e7e7e;
 
 @keyframes slide {
     0% {
-        transform: scaleY(0)
+        transform: translateX(-100%);
+        opacity: 0;
     }
     100% {
-        transform: scaleY(1)
+        transform: translateX(0);
+        opacity: 1;
     }
 }
 
