--- a/css/style.css
+++ b/css/style.css
@@ -44,10 +44,12 @@
 }
 @keyframes slide {
   0% {
-    transform: scaleY(0);
+    transform: translateX(-100%);
+    opacity: 0;
   }
   100% {
-    transform: scaleY(1);
+    transform: translateX(0);
+    opacity: 1;
   }
 }
 /*****HEADER*****/
@@ -135,9 +137,9 @@ header {
   animation: fadein 1.5s both 500ms;
 }
 .intro .introTitle {
-  padding-left: 70px;
-  padding-right: 70px;
+  padding: 0 2.5em 0;
   margin-bottom: 10px;
+  font-size: 25px;
 }
 .intro .introTxt {
   margin-top: 0;
@@ -159,12 +161,12 @@ header {
   height: 50px;
   box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
   animation: fadein 1.5s both 600ms;
+  transition: 0.3s;
   cursor: pointer;
 }
 .intro .mainButtonPurple:hover {
   filter: brightness(1.1);
-  transition: 0.3s;
-  transform: scale(1.1);
+  box-shadow: 2px 2px 10px #6b6b6b;
 }
 
 /*****FONCTIONALITE*****/
@@ -190,6 +192,7 @@ header {
   height: 70px;
   box-shadow: rgba(50, 50, 93, 0) 0px 5px 10px 0px, rgba(0, 0, 0, 0.2) -1px 5px 15px;
   animation: appear 1.5s both 900ms;
+  cursor: pointer;
 }
 .function .cardNumber {
   color: white;
@@ -234,37 +237,16 @@ header {
   border-radius: 20px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
   animation: appear 2s both 1200ms;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
-.restos .restosList2 {
-  position: relative;
-  background-color: white;
-  border-radius: 20px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
-  animation: appear 2s both 1300ms;
-  margin-bottom: 15px;
+.restos .delay1 {
+  animation-delay: 1300ms;
 }
-.restos .restosList3 {
-  position: relative;
-  background-color: white;
-  border-radius: 20px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
-  animation: appear 2s both 1400ms;
-  margin-bottom: 15px;
+.restos .delay2 {
+  animation-delay: 1400ms;
 }
-.restos .restosList4 {
-  position: relative;
-  background-color: white;
-  border-radius: 20px;
-  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 10px;
-  animation: appear 2s both 1500ms;
-  margin-bottom: 25px;
-}
-.restos .restosdetail {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-right: 1em;
+.restos .delay3 {
+  animation-delay: 1500ms;
 }
 .restos .restosCard img {
   width: 100%;
@@ -299,24 +281,25 @@ header {
   color: transparent;
   background-image: linear-gradient(#9356DC, #FF79DA);
   background-clip: text;
-  -webkit-background-clip: text;
   opacity: 0;
   transition: all 300ms ease;
 }
-.restos .filledHeart:hover {
+.restos .filledHeart:active {
   opacity: 1;
 }
 
 /*****MEDIA-QUERIES-TABLET*****/
 @media (min-width: 767.98px) {
-  .intro {
-    border-radius: 0 0 25px 25px;
+  .introTitle {
+    font-size: 32px;
   }
   .mainButtonPurple {
     max-width: 30%;
   }
-  .function h1 {
-    margin: auto;
+  .function {
+    padding: 2em 3em 3em;
+  }
+  .function h2 {
     margin-bottom: 25px;
   }
   .function .steps {
@@ -325,34 +308,37 @@ header {
     padding-left: 5px;
   }
   .restos {
-    border-radius: 25px 25px 0 0;
+    padding: 2em 3em 3em;
   }
   .restosTitle {
-    margin: auto;
     margin-bottom: 25px;
   }
   .cardTablet {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
-    gap: 20px;
   }
   .restosList {
-    width: 48%;
+    width: 45%;
+    margin-bottom: 0;
   }
   .restosList2 {
-    width: 48%;
+    width: 45%;
+    margin: 0;
   }
   .restosList3 {
-    width: 48%;
-    height: 350px;
+    width: 45%;
+    margin: 0;
   }
   .restosList4 {
-    width: 48%;
+    width: 45%;
+    margin: 0;
   }
   .restos .restosCard img {
-    height: 270px;
+    height: 150px;
+  }
+  .filledHeart:hover {
+    opacity: 1;
   }
 }
 /*****MEDIA-QUERIES-DESKTOP*****/
@@ -360,33 +346,35 @@ header {
   .intro {
     border-radius: 0;
   }
-  nav {
-    border-bottom: 1px solid #FF79DA;
+  .intro .introTitle {
+    font-size: 40px;
   }
-  .function-and-restos {
-    display: flex;
+  .intro .mainButtonPurple {
+    max-width: 22%;
   }
   .function {
-    background-color: whitesmoke;
-    width: 25%;
-    justify-content: center;
-    border-right: 1px solid #FF79DA;
+    display: flex;
+    padding: 3em 8em;
   }
-  .function h1 {
+  .function h2 {
     margin-top: 0;
-  }
-  .function .steps {
-    flex-direction: column;
+    margin-bottom: 30px;
   }
   .restos {
-    width: 75%;
     border-radius: 0;
+    padding: 2.5em 8em;
+  }
+  .restos .restosCard img {
+    height: 220px;
+  }
+  .cardTablet {
+    gap: 20px;
   }
 }
 /*****PRESENTATION*****/
 .backImg {
   width: 100%;
-  height: 250px;
+  height: 300px;
   object-fit: cover;
   animation: fadein 1.5s both 400ms;
 }
@@ -400,27 +388,30 @@ header {
   border-radius: 3em 3em 0 0;
   margin-top: -4em;
 }
-.restosName .restosHead {
+.restosName .titleAlign {
   display: flex;
-  justify-content: space-between;
-  font-family: "Shrikhand", serif;
-  font-size: 28px;
-  max-width: 500px;
-  margin: auto;
-  margin-top: 1em;
-  margin-bottom: 1.5em;
+  align-items: center;
   animation: appear 1.5s both 500ms;
 }
+.restosName .restosHead {
+  display: flex;
+  justify-content: flex-start;
+  font-family: "Shrikhand", serif;
+  font-size: 28px;
+  font-weight: 400;
+  font-style: italic;
+  max-width: 500px;
+  margin: 1em 2em 1em 0;
+}
 .restosName .heartIcon i {
-  position: absolute;
-  right: 1.5em;
-  top: 0.2em;
+  font-size: 25px;
 }
 .restosName .filledHeart {
+  position: relative;
+  right: 1.15em;
   color: transparent;
   background-image: linear-gradient(#9356DC, #FF79DA);
   background-clip: text;
-  -webkit-background-clip: text;
   opacity: 0;
   transition: all 400ms ease;
 }
@@ -430,8 +421,6 @@ header {
 .restosName .allMenu {
   display: grid;
   gap: 3em;
-  max-width: 500px;
-  margin: auto;
 }
 .restosName .menuBlock {
   display: flex;
@@ -452,11 +441,24 @@ header {
   background-color: white;
   border-radius: 15px;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-  animation: slide 1s 1500ms linear both;
+  animation: slide 1s linear both;
 }
-.restosName .menuChoices:hover .menuSelect {
+.restosName .menudelay1 {
+  animation-delay: 1000ms;
+}
+.restosName .menudelay2 {
+  animation-delay: 1400ms;
+}
+.restosName .menudelay3 {
+  animation-delay: 1800ms;
+}
+.restosName .menudelay4 {
+  animation-delay: 2200ms;
+}
+.restosName .menuChoices:active .menuSelect {
   opacity: 1;
   width: 55px;
+  box-shadow: rgba(49, 57, 165, 0.2) 0px 8px 24px;
 }
 .restosName .dishesCard {
   display: flex;
@@ -503,14 +505,14 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: ease-out width 600ms;
+  transition: ease-out width;
+  transition: 600ms;
 }
 .restosName .iconCheck {
   background-color: #99E2D0;
   border-radius: 50px;
   color: white;
   font-size: 20px;
-  transform: rotateZ(360deg);
 }
 .restosName .mainButtonPurple {
   display: flex;
@@ -520,43 +522,47 @@ header {
   background: linear-gradient(162deg, #FF79DA 0%, #9356DC 100%);
   color: white;
   margin: 3em auto;
-  width: 60%;
+  width: 45%;
   height: 50px;
   box-shadow: rgba(149, 157, 165, 0.3) 0px 8px 24px;
   animation: fadein 1.5s both 1500ms;
   cursor: pointer;
+  transition: 0.3s;
 }
 .restosName .mainButtonPurple:hover {
   filter: brightness(1.1);
-  transition: 0.3s;
-  transform: scale(1.1);
+  box-shadow: 2px 2px 10px #6b6b6b;
 }
 
 @media (min-width: 767.98px) {
   .backImg {
-    position: fixed;
-    height: 100%;
+    height: 450px;
   }
   .restosName {
     width: 60%;
     margin: auto;
+    margin-top: -3em;
   }
-  .restosName .restosHead {
-    width: 60%;
+  .restosName .titleAlign {
+    width: 100%;
+    display: flex;
     margin: auto;
-    margin-top: 1em;
-    margin-bottom: 1.5em;
-    justify-content: space-around;
+    justify-content: center;
   }
-  .restosHead .heartIcon {
-    position: relative;
-    top: 0;
-    right: -2.2em;
+  .restosName h2 {
+    padding-right: 0;
   }
-}
-@media (min-width: 1024px) {
-  .restosName .restosHead {
-    width: 50%;
+  .allMenu {
+    max-width: 65%;
+    margin: auto;
+  }
+  .menuChoices:hover .menuSelect {
+    opacity: 1;
+    width: 55px;
+    box-shadow: rgba(49, 57, 165, 0.2) 0px 8px 24px;
+  }
+  .mainButtonPurple {
+    max-width: 25%;
   }
 }
 /*****FOOTER*****/
@@ -566,7 +572,7 @@ footer {
   color: white;
   display: flex;
   flex-direction: column;
-  animation: fadein 1.5s both 2s;
+  animation: fadein 1.5s both 1s;
 }
 footer .footerTitle {
   font-family: "Shrikhand", serif;
@@ -585,14 +591,29 @@ footer .iconWhite {
 
 /*****MEDIA-QUERIES-TABLET*****/
 @media (min-width: 767.98px) {
+  footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 1em 1.5em 0;
+  }
+  .footerDesktop {
+    display: flex;
+    order: 2;
+    padding: 1em 0 1em 5em;
+  }
   .footerTitle {
     display: flex;
-    justify-content: center;
+    justify-items: center;
   }
   footer .footerLink {
     flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: flex-end;
+    margin-bottom: 0;
+  }
+  footer .footerLink a {
+    margin-left: 20px;
   }
 }
 /*****GENERAL*****/
